--- a/Default.ini
+++ b/Default.ini
@@ -1,8 +1,8 @@
 [Host]
 InstantForceHost=1
 CountdownForceHost=0
-AntiNoob=0
-EasyLobbies=0
+AntiNoob=1
+EasyLobbies=1
 DisableADS=0
 DisableKillstreaks=0
 DisableEquipment=0
@@ -10,20 +10,17 @@ MaxClients=18
 AutoRefillAmmo=1
 NoClipToggle=1
 EnableKillstreaks=0
-EnableKillcams=0
+EnableKillcams=1
 EnableHealth=0
-FriendHealth=100
-PlayerHealth=100
+FriendHealth=150
+PlayerHealth=50
 KickMessage=You Were Kicked
-YourName=Your Name
-Friend1=Friend 1
-Friend2=Friend 2
-Friend3=Friend 3
+YourName=GRIIM
+Friend1=Gripz
+Friend2=TRTL
+Friend3=Celeste
 Friend4=Friend 4
 Friend5=Friend 5
-Friend6=Friend 6
-Friend7=Friend 7
-Friend8=Friend 8
 [Misc]
 Fov=65
 FPS=250
