--- a/Default.ini
+++ b/Default.ini
@@ -12,13 +12,13 @@ NoClipToggle=1
 EnableKillstreaks=0
 EnableKillcams=1
 EnableHealth=0
-FriendHealth=150
-PlayerHealth=50
+FriendHealth=100
+PlayerHealth=100
 KickMessage=You Were Kicked
-YourName=GRIIM
-Friend1=Gripz
-Friend2=TRTL
-Friend3=Celeste
+YourName=Your Name
+Friend1=Friend 1
+Friend2=Friend 2
+Friend3=Friend 3
 Friend4=Friend 4
 Friend5=Friend 5
 [Misc]
